# pantrydb

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  schema.sql  server.py  worker-configuration.d.ts  wrangler.jsonc
alembic/: env.py
alembic/versions/: cd83845397ee_added_pantry_item_table.py
aws/: .gitignore  README.md  app.py  cdk.json  pantrydb_stack.py
db/: schema.sql
pantrydb/: items.py
pantrydb/database/: __init__.py  abstract.py  dynamo.py  factory.py  local.py  postgres.py  rds.py
src/: github-handler.ts  index.ts  schemas.ts  types.ts
