[project]
name = "pantrydb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
# TODO consider re-adding sqlalchemy, alembic, and psycopg2 again
dependencies = [
    "mcp[cli]>=1.9.4",
    "boto3>=1.39.1",
    "structlog>=25.4.0",
]

[dependency-groups]
dev = [
    "aws-cdk-lib>=2.204.0",
    "constructs>=10.4.2",
]

[tool.setuptools]
packages = ["pantrydb"]
